<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/browser"
        android:id="@+id/browser_menu"
        android:icon="@mipmap/disk_unknown" />
    <item android:title="@string/settings"
        android:id="@+id/settings_menu"
        android:icon="@mipmap/menu_config" />
    <item android:title="@string/input"
        android:id="@+id/input_menu"
        android:icon="@mipmap/menu_input" />
    <item android:title="@string/pgconfig"
        android:id="@+id/pgconfig_menu"
        android:icon="@mipmap/menu_config" />
    <item android:title="@string/cloud"
        android:id="@+id/cloud_menu"
        android:icon="@mipmap/menu_cloud" />
    <item android:title="@string/rateme"
        android:id="@+id/rateme_menu"
        android:icon="@mipmap/menu_star" />
    <item android:title="@string/messages"
        android:id="@+id/message_menu"
        android:icon="@mipmap/menu_debug" />
    <item android:title="@string/about"
        android:id="@+id/about_menu"
        android:icon="@mipmap/menu_question" />
    <item
        android:id="@+id/version_spacer"
        android:title=""/>
</menu>
