<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuDebug"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_back" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonClearCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_clear_cache" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonProfilerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_profiler_one" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonProfilerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_profiler_two" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonPrintStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_print_stats" />
        </TableRow>
    </TableLayout>

</ScrollView>