<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuMain"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/vmuIcon"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:orientation="vertical" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonDisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_disk" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonVmuSwap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_vmu_swap" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_options" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonDebugging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_debugging" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonScreenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_screenshot" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:ems="8"
                android:text="@string/popup_button_exit" />
        </TableRow>
    </TableLayout>

</ScrollView>